fixed swagger stuff
